[project]
name = "arkhai-kit-config"
version = "0.1.0"
description = "Shared market configuration loading and registry URL helpers"
requires-python = ">=3.10,<3.14"
dependencies = [
    "eth-account>=0.13.0",
    "arkhai-kit-alkahest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/market_config"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests/unit"]

[tool.uv.sources]
arkhai-kit-alkahest = { path = "../alkahest", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9.0.0",
]
