[project]
name = "arkhai-kit-identity"
version = "0.1.0"
license = "MIT"
description = "Pluggable identity models and signature verifiers for the market"
requires-python = ">=3.10,<3.14"
dependencies = [
    "eth-account>=0.13.0",
    "pydantic>=2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/market_identity"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests/unit"]

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9.0.0",
]
