[project]
name = "scm-issue-discovery"
version = "0.1.0"
license = "MIT"
description = "Issue discovery harness for Simple Compute Market local and clean-room validation"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.23.0",
    "PyYAML>=6.0.2",
]

[project.scripts]
issue-discovery = "issue_discovery.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/issue_discovery"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
