[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arkhai-apitokens-service"
version = "0.1.0"
license = "MIT"
description = "API-tokens service: keys, credit grants, consumption, and the site quota ledger"
requires-python = ">=3.12"
dependencies = [
    "arkhai-core-site>=0.1.0",
    "dynaconf>=3.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.7",
    "sqlalchemy>=2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9.0.0",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
